# dbus-music

./: .gitignore  CMakeLists.txt  tags
include/: log.h  mpris_media_player.h
src/: main.cpp  mpris_media_player.cpp
